--- a/Assignment1/Readme
+++ b/Assignment1/Readme
@@ -1,4 +1,4 @@
-# Marvellous Logic Building Assignment : 1 💡
+#  Logic Building Assignment : 1 💡
 
 This repository contains five logic-building programs in C. Each file is named using the format `A1QX.c`, where `X` is the question number.
 
